# pyreports

./: .gitignore  CHANGES.md  MANIFEST.in  README.md  __info__.py  index.html  pyproject.toml  setup.py
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: reports-enhancement.md  reports-issue.md
docs/: requirements.txt
docs/source/: conf.py  datatools.rst  example.rst  executors.rst  index.rst  install.rst  managers.rst  package.rst  pyreports.rst  report.rst
docs/source/dev/: cli.rst  core.rst  io.rst
page/assets/css/: theme-py.css
pyreports/: __info__.py  __init__.py  cli.py  core.py  datatools.py  exception.py  io.py
reports/: __init__.py  core.py  datatools.py  exception.py  inputs.py  io.py  outputs.py
tests/: __init__.py  test_core.py  test_data.py  test_db.py  test_file.py
